--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -5,38 +5,50 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!-- Email Input -->
+    <!-- Card Number Input -->
     <EditText
-        android:id="@+id/emailEditText"
+        android:id="@+id/cardNumberEditText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Email"
-        android:inputType="textEmailAddress"
+        android:hint="Card Number"
+        android:inputType="number"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_margin="16dp" />
 
-    <!-- Password Input -->
+    <!-- Expiry Date Input -->
     <EditText
-        android:id="@+id/passwordEditText"
+        android:id="@+id/expiryDateEditText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Password"
-        android:inputType="textPassword"
-        app:layout_constraintTop_toBottomOf="@id/emailEditText"
+        android:hint="Expiry Date (MM/YY)"
+        android:inputType="date"
+        app:layout_constraintTop_toBottomOf="@id/cardNumberEditText"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_margin="16dp" />
 
-    <!-- Login Button -->
+    <!-- CVV Input -->
+    <EditText
+        android:id="@+id/cvvEditText"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:hint="CVV"
+        android:inputType="numberPassword"
+        app:layout_constraintTop_toBottomOf="@id/expiryDateEditText"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="16dp" />
+
+    <!-- Pay Now Button -->
     <Button
-        android:id="@+id/loginButton"
+        android:id="@+id/payNowButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Login"
-        app:layout_constraintTop_toBottomOf="@id/passwordEditText"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:text="Pay Now"
+        app:layout_constraintTop_toBottomOf="@id/cvvEditText"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:layout_margin="16dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
