--- a/app/src/main/res/layout/activity_product_list.xml
+++ b/app/src/main/res/layout/activity_product_list.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent"
     tools:context=".activities.ProductListActivity">
 
-    <!-- Main layout with SearchView, Category RecyclerView and Product RecyclerView -->
+    <!-- Main layout with Category RecyclerView and Product RecyclerView -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -21,15 +21,6 @@
             android:background="@color/white"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
-        <SearchView
-            android:id="@+id/productSearch"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            app:layout_constraintTop_toBottomOf="@id/toolbar"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
-
         <!-- Horizontal RecyclerView for category filtering -->
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewCategories"
@@ -37,7 +28,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            app:layout_constraintTop_toBottomOf="@id/productSearch"
+            app:layout_constraintTop_toBottomOf="@id/toolbar"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:orientation="horizontal"
@@ -53,6 +44,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <!-- Navigation Drawer -->
