--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -11,9 +12,10 @@
         android:layout_width="0dp"
         android:layout_height="200dp"
         android:layout_margin="16dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:paddingTop="40dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <!-- Product Name -->
     <TextView
@@ -21,42 +23,53 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:textSize="24sp"
-        app:layout_constraintTop_toBottomOf="@id/productImagesRecyclerView"
+        android:textAlignment="center"
+        android:textColor="#0457F1"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/productImagesRecyclerView"
+        tools:text="Product Name" />
 
     <!-- Product Price -->
     <TextView
         android:id="@+id/productPriceDetail"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:textAlignment="center"
         android:textSize="18sp"
-        app:layout_constraintTop_toBottomOf="@id/productNameDetail"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/productNameDetail"
+        tools:text="1000.00 LKR" />
 
     <!-- Product Description -->
     <TextView
         android:id="@+id/productDescriptionDetail"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="1dp"
+        android:padding="20dp"
+        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/productPriceDetail" />
+        app:layout_constraintTop_toBottomOf="@id/productPriceDetail"
+        tools:text="bla blabla blabla blabla blabla blabla blabla blabla blabla blabla blabla blabla blabla blabla blabla blabla blabla blabla blabla blabla blabla blabla blabla blabla bla" />
 
     <!-- Vendor Name -->
     <TextView
         android:id="@+id/vendorName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
+        android:layout_margin="1dp"
         android:clickable="true"
         android:focusable="true"
         android:text="Vendor Name"
+        android:textAlignment="center"
         android:textColor="@android:color/holo_blue_dark"
-        android:textSize="18sp"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/productDescriptionDetail" />
@@ -65,29 +78,31 @@
 
     <Button
         android:id="@+id/removeQuantityButton"
-        android:layout_width="wrap_content"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="48dp"
+        android:backgroundTint="#E91E63"
         android:text="-"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/productDescriptionDetail" />
 
     <Button
         android:id="@+id/addQuantityButton"
-        android:layout_width="wrap_content"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="48dp"
+        android:layout_marginEnd="20dp"
+        android:backgroundTint="#009688"
         android:text="+"
-        app:layout_constraintStart_toEndOf="@id/quantityText"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/productDescriptionDetail" />
 
     <!-- Add to Cart Button -->
 
     <TextView
         android:id="@+id/quantityText"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:layout_marginTop="60dp"
@@ -98,8 +113,11 @@
 
     <Button
         android:id="@+id/addToCartButton"
+        android:backgroundTint="#0457f1"
         android:text="Add to Cart"
-        android:layout_width="wrap_content"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/addQuantityButton"
         app:layout_constraintStart_toStartOf="parent"
@@ -115,6 +133,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:src="@drawable/ic_cart"
+        app:backgroundTint="#0457f1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:tint="@android:color/white" />
