--- a/app/src/main/res/layout/activity_vendor_detail.xml
+++ b/app/src/main/res/layout/activity_vendor_detail.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <!-- Vendor Name -->
     <TextView
         android:id="@+id/vendorNameDetail"
         android:layout_width="wrap_content"
@@ -13,6 +14,7 @@
         android:textSize="24sp"
         android:layout_margin="16dp" />
 
+    <!-- Vendor Contact Info -->
     <TextView
         android:id="@+id/vendorContactDetail"
         android:layout_width="wrap_content"
@@ -21,11 +23,15 @@
         android:layout_margin="16dp"
         app:layout_constraintTop_toBottomOf="@id/vendorNameDetail" />
 
-    <TextView
-        android:id="@+id/vendorRatingDetail"
+    <!-- Vendor Rating (RatingBar to visually show rating) -->
+    <RatingBar
+        android:id="@+id/vendorRatingBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Rating: 5.0"
+        android:numStars="5"
+        android:stepSize="0.1"
+        android:isIndicator="true"
+        android:rating="5.0"
         android:layout_margin="16dp"
         app:layout_constraintTop_toBottomOf="@id/vendorContactDetail" />
 
@@ -34,7 +40,7 @@
         android:id="@+id/recyclerViewRatings"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/vendorRatingDetail"
+        app:layout_constraintTop_toBottomOf="@id/vendorRatingBar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
