--- a/app/src/main/res/layout/item_order_item.xml
+++ b/app/src/main/res/layout/item_order_item.xml
@@ -2,35 +2,60 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="16dp">
 
+    <!-- Product Image -->
+    <ImageView
+        android:id="@+id/productImageView"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:scaleType="centerCrop"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/logo" />
+
+    <!-- Product Name -->
     <TextView
         android:id="@+id/productNameText"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Product Name"
-        android:textSize="16sp"
+        android:textAlignment="textStart"
+        android:paddingLeft="20dp"
+        android:textColor="#0457F1"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/productImageView"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        tools:text="Product Name" />
 
+    <!-- Product Quantity -->
     <TextView
         android:id="@+id/productQuantityText"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Quantity"
         android:textSize="14sp"
+        android:paddingLeft="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/productImageView"
         app:layout_constraintTop_toBottomOf="@id/productNameText"
-        app:layout_constraintStart_toStartOf="parent" />
+        tools:text="Quantity :- 10" />
 
+    <!-- Product Price -->
     <TextView
         android:id="@+id/productPriceText"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Price"
         android:textSize="14sp"
+        android:paddingLeft="20dp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/productImageView"
         app:layout_constraintTop_toBottomOf="@id/productQuantityText"
-        app:layout_constraintStart_toStartOf="parent" />
+        tools:text="Price :- 1000.00 LKR" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
