--- a/app/src/main/res/layout/item_rating.xml
+++ b/app/src/main/res/layout/item_rating.xml
@@ -6,14 +6,15 @@
     android:layout_height="wrap_content"
     android:padding="8dp">
 
-    <!-- Rating stars -->
-    <TextView
-        android:id="@+id/ratingStars"
+    <!-- Rating stars using RatingBar -->
+    <RatingBar
+        android:id="@+id/ratingBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Stars: 5"
-        android:textSize="16sp"
-        android:textStyle="bold"
+        android:numStars="5"
+        android:stepSize="0.5"
+        android:isIndicator="true"
+        android:rating="5"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -24,7 +25,7 @@
         android:layout_height="wrap_content"
         android:text="This is a comment about the vendor."
         android:textSize="14sp"
-        app:layout_constraintTop_toBottomOf="@id/ratingStars"
+        app:layout_constraintTop_toBottomOf="@id/ratingBar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
