--- a/app/src/main/res/menu/app_bar_menu.xml
+++ b/app/src/main/res/menu/app_bar_menu.xml
@@ -6,4 +6,11 @@
         android:icon="@drawable/baseline_search_24"
         app:actionViewClass="androidx.appcompat.widget.SearchView"
         app:showAsAction="collapseActionView|ifRoom" />
+
+    <!-- New filter item -->
+    <item
+        android:id="@+id/app_bar_filter"
+        android:title="Filter"
+        android:icon="@drawable/baseline_filter_list_24"
+        app:showAsAction="always" />
 </menu>
