--- a/app/src/main/res/layout/activity_vendor_detail.xml
+++ b/app/src/main/res/layout/activity_vendor_detail.xml
@@ -2,6 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:padding="20dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -11,6 +13,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Vendor Name"
+        android:textAlignment="center"
+        android:textColor="#0457F1"
+        android:textStyle="bold"
         android:textSize="24sp"
         android:layout_margin="16dp" />
 
@@ -20,37 +25,71 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Contact Info"
+        android:textStyle="bold"
+        android:textSize="20dp"
         android:layout_margin="16dp"
         app:layout_constraintTop_toBottomOf="@id/vendorNameDetail" />
 
     <!-- Vendor Rating (RatingBar to visually show rating) -->
+
     <RatingBar
         android:id="@+id/vendorRatingBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:numStars="5"
-        android:stepSize="0.1"
-        android:isIndicator="true"
-        android:rating="5.0"
         android:layout_margin="16dp"
-        app:layout_constraintTop_toBottomOf="@id/vendorContactDetail" />
+        android:isIndicator="true"
+        android:numStars="5"
+        android:rating="5.0"
+        android:stepSize="0.1"
+        app:layout_constraintTop_toBottomOf="@id/vendorContactDetail"
+        tools:layout_editor_absoluteX="2dp" />
+
+    <TextView
+        android:id="@+id/ratingNumber"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#090909"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="@+id/titleReviews"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/vendorRatingBar"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.688"
+        tools:text="Rate 5.0" />
+
+    <TextView
+        android:id="@+id/titleReviews"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Reviews"
+        android:textStyle="bold"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/recyclerViewRatings"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/vendorRatingBar" />
 
     <!-- RecyclerView to display vendor ratings -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewRatings"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/vendorRatingBar"
+        android:layout_width="386dp"
+        android:layout_height="480dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/vendorRatingBar" />
 
     <!-- Add Rating Button -->
     <Button
         android:id="@+id/addRatingButton"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="Add Rating"
+        android:backgroundTint="#0457f1"
+        android:textSize="20dp"
+        android:textStyle="bold"
         android:layout_margin="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
